[gd_scene load_steps=10 format=3 uid="uid://c8fgfjvu66xxs"]

[ext_resource type="Script" path="res://entities/UI/main_menu.gd" id="1_0wbm3"]
[ext_resource type="PackedScene" uid="uid://cm6txmo4y6kcu" path="res://entities/world/world_1.tscn" id="2_rm0kx"]
[ext_resource type="AudioStream" uid="uid://cf0ylljvtqgx0" path="res://sounds/select.wav" id="3_hk4d3"]
[ext_resource type="Texture2D" uid="uid://d5hp5sr63up2" path="res://sprites/world/basket.png" id="3_la0n4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bp2hr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_buqpm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2htc6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mgjor"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5li1u"]

[node name="MainMenu" type="Node"]
script = ExtResource("1_0wbm3")
next_scene = ExtResource("2_rm0kx")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(160, 90)
texture = ExtResource("3_la0n4")

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer"]
offset_left = 125.0
offset_top = 26.0
offset_right = 206.0
offset_bottom = 56.0

[node name="ButtonPlay" type="Button" parent="CanvasLayer/PanelContainer"]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_bp2hr")
theme_override_styles/hover = SubResource("StyleBoxEmpty_buqpm")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_2htc6")
theme_override_styles/normal = SubResource("StyleBoxEmpty_mgjor")
text = "JUGAR"

[node name="PanelCredits" type="PanelContainer" parent="CanvasLayer"]
offset_left = 100.0
offset_top = 62.0
offset_right = 236.0
offset_bottom = 92.0

[node name="ButtonCredits" type="Button" parent="CanvasLayer/PanelCredits"]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_5li1u")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_5li1u")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_5li1u")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_5li1u")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_5li1u")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_5li1u")
theme_override_styles/hover = SubResource("StyleBoxEmpty_5li1u")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_5li1u")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_5li1u")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_5li1u")
theme_override_styles/normal = SubResource("StyleBoxEmpty_5li1u")
text = "Créditos música"

[node name="PanelCredits2" type="PanelContainer" parent="CanvasLayer"]
visible = false
offset_left = 53.0
offset_top = 106.0
offset_right = 262.0
offset_bottom = 169.0

[node name="LabelCredits" type="Label" parent="CanvasLayer/PanelCredits2"]
layout_mode = 2
theme_override_font_sizes/font_size = 7
text = "\"Getting it Done\"
Kevin MacLeod (incompetech.com)
Licensed under Creative Commons: By Attribution 3.0
http://creativecommons.org/licenses/by/3.0/"
horizontal_alignment = 1

[node name="SFXSelect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_hk4d3")

[connection signal="pressed" from="CanvasLayer/PanelContainer/ButtonPlay" to="." method="_on_button_play_pressed"]
[connection signal="pressed" from="CanvasLayer/PanelCredits/ButtonCredits" to="." method="_on_label_credits_pressed"]
